--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_web",
+  "name": "hh-webpage",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -19,7 +19,7 @@
     "css-loader": "^2.1.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "17.1.1",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "file-loader": "^4.1.0",
